<?xml version="1.0"?>
<package>
  <name>freeboard_ros</name>
  <version>0.1.0</version>
  <description>The freeboard_ros package</description>

  <maintainer email="mmonajje@sfu.ca">Mani Monajjemi</maintainer>
  <author email="mmonajje@sfu.ca">Mani Monajjemi</author>

  <license>MIT</license>


  <url type="website">http://wiki.ros.org/freeboard_ros</url>
  <url type="repository">http://github.com/AutonomyLab/freeboard_ros</url>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roslint</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>python_bottle</run_depend>
  
  <export>
  </export>
</package>
